_sass/global.scss
/* ... */
/* BANNER STYLES ENDS HERE */


/* ACCORDIONS STYLES STARTS HERE*/
.accordions {
  p.desc {
    text-align: left;
  }

  .accordion {
    position: relative;

    .acc-content {
      display: none;
      padding: 40px 0;
      border: 1px solid #ddd;
      border-top: none;

      @media (min-width: $mobile_screen) {
        padding: 80px 0;
      }
    }

    .acc-content.active {
      display: block;
    }

    &:last-child,
    .acc-header.active {
      border-bottom: 2px solid $black;
    }

    .acc-header {
      background-color: $primary;
      color: $black;
      cursor: pointer;
      padding: 0;
      width: 100%;
      border: none;
      height: 80px;
      text-align: left;
      outline: none;
      font-size: 16px;
      font-weight: 700;
      line-height: 18px;
      letter-spacing: 2px;
      align-items: center;
      display: flex;
      justify-content: space-between;
      border-top: 2px solid $black;
      border-bottom: 2px solid $black;
      border-bottom: 0;
      position: relative;

      @media (min-width: $mobile_screen) {
        font-size: 16px;
        line-height: 40px;

      }

      &:hover {
        .icon {
          background-color: $black;

          &::after,
          &:before {
            background-color: $white;
          }
        }
      }

      &.active {
        border-bottom: 2px solid $black;

        .icon {
          background-color: $black;

          &:after {
            display: none;
          }

          &:after,
          &:before {
            background-color: $white;
          }
        }
      }

      .label {
        padding: 0 30px;
        text-transform: uppercase;
      }

      .icon {
        position: absolute;
        align-items: center;
        justify-content: center;
        display: flex;
        background-color: $white;
        height: 100%;
        width: 120px;
        top: 0;
        right: 0;
        border-left: 2px solid $black;
        border-right: 2px solid $black;

        &::after {
          transform: rotate(90deg);
          display: block;
        }

        &::after,
        &:before {
          content: "";
          position: absolute;
          height: 2px;
          width: 38px;
          background-color: $black;
        }
      }
    }
  }
}

/* ACCORDIONS STYLES ENDS HERE*/

/* FOOTER STYLES STARTS HERE*/
#footer {
  min-height: 200px;
  height: auto;
  background-color: $dark;

  .wrapper {
    display: flex;
    flex-wrap: wrap;
    padding: 40px 0;
    justify-content: space-between;
    gap: 30px;

    .location,
    .copy-right {
      color: $white;
      display: flex;
      gap: 6px;
      align-items: baseline;

      p {
        line-height: 24px;
        font-size: 16px;
      }
    }

    @media (min-width: $mobile_screen) {
      flex-wrap: nowrap;

      .location,
      .copy-right {
        p {
          font-size: 20px;
        }
      }

      .location {
        text-align: left;

        .icon {
          width: 10px;
          height: 10px;
        }
      }

      .copy-right p {
        text-align: right;
        font-size: 16px;
        text-transform: uppercase;
        font-weight: 700;
      }
    }
  }
}

/* FOOTER STYLES ENDS HERE*/

/* PLAYER LIST  STARTS HERE*/
.player-list {
  margin: 30px 0 0;

  .player {
    border: 2px solid $black;
    border-bottom: 0;
    display: flex;
    min-height: 120px;
    position: relative;
    cursor: pointer;

    audio {
      position: absolute;
      z-index: -1;
      opacity: 0;
    }

    .hide {
      display: none;
    }

    &:hover .player-icon {
      background-color: $black;
    }

    &:last-child {
      border-bottom: 2px solid $black;
    }

    .player-icon {
      width: 120px;
      min-width: 120px;
      display: flex;
      align-items: center;
      justify-content: center;
      background-color: $primary;

    }

    .content {
      padding: 24px 10px;
      border-left: 2px solid $black;
      display: flex;
      justify-content: start;
      width: 100%;

      .info {
        display: flex;
        justify-content: center;
        flex-direction: column;
      }

      h3 {
        font-size: 14px;
        line-height: 26px;
        font-weight: 700;
        font-family: $font-family;
        letter-spacing: 2px;
        text-transform: uppercase;
        color: $black;
      }

      p,
      i {
        display: block;
        font-size: 16px;
        line-height: 26px;
        font-weight: 400;
        font-family: $font-family;
        letter-spacing: 2px;
      }

      .timing {
        display: none;
      }
    }

  }

  @media (min-width: $mobile_screen) {
    margin: 80px 0;

    .player {
      .content {
        padding: 16px 36px 16px 36px;
        border-left: 2px solid $black;
        display: flex;
        justify-content: space-between;

        h3 {
          font-size: 16px;
        }

        p,
        i {
          display: inline-block;
          font-size: 20px;
          line-height: 32px;
        }
      }

      .timing {
        display: flex !important;
        align-items: center;
        justify-content: center;
        gap: 16px;
        font-size: 16px;
        line-height: 26px;
        font-weight: 700;
        font-family: $font-family;
        letter-spacing: 2px;
        color: $grey;
      }
    }
  }
}
/* ... */

